--- a/Android/Lead/app/src/main/res/values/dimens.xml
+++ b/Android/Lead/app/src/main/res/values/dimens.xml
@@ -3,7 +3,49 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="content_margin">8dp</dimen>
+
+
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="navigation_drawer_width">320dp</dimen>
+    <dimen name="navigation_drawer_header_height">180dp</dimen>
+
+    <dimen name="recyclerview_list_row_height">80dp</dimen>
+    <dimen name="recyclerview_list_row_text_padding_left">16dp</dimen>
+    <dimen name="recyclerview_list_row_text_padding_right">16dp</dimen>
+    <dimen name="recyclerview_list_row_text_padding_top">20dp</dimen>
+    <dimen name="recyclerview_list_row_text_padding_bottom">20dp</dimen>
+
+    <dimen name="text_actionbar_title">18sp</dimen>
+
+    <dimen name="text_primary">16sp</dimen>
+    <dimen name="text_secondary">14sp</dimen>
+    <dimen name="text_caption">12sp</dimen>
+    <dimen name="text_caption_height">48dp</dimen>
+    <dimen name="text_card_view_title">20sp</dimen>
+    <dimen name="text_card_view_big_title">24sp</dimen>
+
+
+    <dimen name="btn_flat_corner_radius">1dp</dimen>
+    <dimen name="btn_flat_min_width">88dp</dimen>
+    <dimen name="btn_flat_min_height">36dp</dimen>
+    <dimen name="btn_flat_padding">8dp</dimen>
+    <dimen name="btn_flat_margin">4dp</dimen>
+
+
+    <dimen name="edit_text_height">48dp</dimen>
+    <dimen name="edit_text_padding_top">8dp</dimen>
+    <dimen name="edit_text_padding_bottom">8dp</dimen>
+    <dimen name="edit_text_margin_top">8dp</dimen>
+    <dimen name="edit_text_margin_bottom">8dp</dimen>
+
+
+    <dimen name="fb_margin_override_top">13dp</dimen>
+    <dimen name="fb_margin_override_bottom">13dp</dimen>
+    <!--The next value changes the margin between the FB icon and the left border:-->
+    <dimen name="fb_margin_override_lr">10dp</dimen>
+    <!--The next value changes the margin between the FB icon and the login text:-->
+    <dimen name="fb_margin_override_textpadding">17dp</dimen>
+
 </resources>
