--- a/Android/Lead/app/src/main/res/values/styles.xml
+++ b/Android/Lead/app/src/main/res/values/styles.xml
@@ -2,7 +2,74 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
     </style>
+
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="displayOptions">useLogo</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/toolbar_primary_text</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="drawerArrowStyle">@style/MyDrawerArrowToggle</item>
+        <item name="colorControlNormal">@android:color/white</item>
+
+    </style>
+
+    <style name="MyDrawerArrowToggle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/white</item>
+    </style>
+
+
+    <!-- Flat Button style -->
+    <style name="AppCompat.Button.Flat" parent="Base.TextAppearance.AppCompat">
+        <item name="android:background">@drawable/btn_flat_selector</item>
+        <item name="android:minWidth">@dimen/btn_flat_min_width</item>
+        <item name="android:minHeight">@dimen/btn_flat_min_height</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:textColor">@color/btn_flat_selector</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">@dimen/btn_flat_padding</item>
+        <item name="android:paddingRight">@dimen/btn_flat_padding</item>
+        <item name="android:layout_marginLeft">@dimen/btn_flat_margin</item>
+        <item name="android:layout_marginRight">@dimen/btn_flat_margin</item>
+    </style>
+
+    <style name="AppCompat.Button.Flat.light.Text" parent="AppCompat.Button.Flat">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AppCompat.Button.Flat.Grey.Text" parent="AppCompat.Button.Flat">
+        <item name="android:textColor">@color/retry_grey</item>
+    </style>
+
+    <style name="AppCompat.Button.Flat.Purple.Text" parent="AppCompat.Button.Flat">
+        <item name="android:textColor">@color/purple</item>
+    </style>
+
+
+
+    <style name="Fragment_Background_Light">
+        <item name="android:background">@color/background_light_grey</item>
+        <item name="android:padding">@dimen/content_margin</item>
+    </style>
+
+
+    <style name="EditText_Style">
+        <item name="android:height">@dimen/edit_text_height</item>
+        <item name="android:paddingTop">@dimen/edit_text_padding_top</item>
+        <item name="android:paddingBottom">@dimen/edit_text_padding_bottom</item>
+        <item name="android:layout_marginTop">@dimen/edit_text_margin_top</item>
+        <item name="android:layout_marginBottom">@dimen/edit_text_margin_bottom</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textSize">@dimen/text_primary</item>
+    </style>
+
 
 </resources>
