After Login activity
1. MainActivity that shows user's journal, experience
2. Using com.github.ksoichiro:android-observablescrollview and
com.nineoldandroids:library

--- a/Android/Lead/app/src/main/res/values/dimens.xml
+++ b/Android/Lead/app/src/main/res/values/dimens.xml
@@ -59,4 +59,9 @@
     <dimen name="text_login_lead_margin_top">8dp</dimen>
     <dimen name="text_login_lead_margin_bottom">8dp</dimen>
     <dimen name="text_login_lead_text_size">24sp</dimen>
+
+    <!-- ViewPager and tabs -->
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="tab_height">48dp</dimen>
+
 </resources>
