--- a/Android/Lead/app/src/main/res/values/styles.xml
+++ b/Android/Lead/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
@@ -18,14 +18,13 @@
         <item name="android:textColorPrimary">@color/toolbar_primary_text</item>
         <item name="actionMenuTextColor">@color/white</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowToggle</item>
-        <item name="colorControlNormal">@android:color/white</item>
-
+        <item name="colorControlNormal">@color/white</item>
     </style>
 
     <style name="MyDrawerArrowToggle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
         <item name="color">@color/white</item>
     </style>
-
 
     <!-- Flat Button style -->
     <style name="AppCompat.Button.Flat" parent="Base.TextAppearance.AppCompat">
@@ -86,7 +85,14 @@
         <item name="android:textSize">@dimen/text_login_lead_text_size</item>
         <item name="android:textColor">@color/grey</item>
         <item name="android:textStyle">normal</item>
-
     </style>
+
+    <style name="CardViewStyle">
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+    </style>
+
 
 </resources>
