--- a/Android/Lead/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/Android/Lead/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,5 +1,35 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:choiceMode="singleChoice"
-    android:divider="@android:color/transparent" android:dividerHeight="0dp"
-    android:background="#cccc" tools:context=".NavigationDrawerFragment" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    tools:context=".NavigationDrawerFragment"
+    android:orientation="vertical">
+
+
+    <RelativeLayout
+        android:id="@+id/drawer_image_header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/navigation_drawer_header_height"
+        style="@style/DrawerHeaderStyle">
+
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:id="@+id/drawer_user_profile_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            style="@style/DrawerHeaderUserImageStyle"/>
+
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/drawer_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent" android:dividerHeight="0dp"
+        style="@style/DrawerListStyle"/>
+
+
+</LinearLayout>
