--- a/Android/Lead/app/src/main/res/values/dimens.xml
+++ b/Android/Lead/app/src/main/res/values/dimens.xml
@@ -64,4 +64,14 @@
     <dimen name="toolbar_elevation">4dp</dimen>
     <dimen name="tab_height">48dp</dimen>
 
+
+    <!-- Drawer layout-->
+    <dimen name="drawer_item_margin_left">16dp</dimen>
+    <dimen name="drawer_item_margin_right">16dp</dimen>
+    <dimen name="drawer_item_margin_top">8dp</dimen>
+    <dimen name="drawer_item_margin_bottom">8dp</dimen>
+
+    <dimen name="drawer_user_image_width">70dp</dimen>
+    <dimen name="drawer_user_image_height">70dp</dimen>
+    <dimen name="drawer_user_image_margin_top">38dp</dimen>
 </resources>
