--- a/Android/Lead/app/src/main/res/values/color.xml
+++ b/Android/Lead/app/src/main/res/values/color.xml
@@ -9,6 +9,7 @@
     <item name="primary" type="color">#673AB7</item>
     <item name="primary_dark" type="color">#512DA8</item>
     <item name="accent" type="color">#FF4081</item>
+    <item name="accent_dark" type="color">#F50057</item>
     <item name="primary_text" type="color">#212121</item>
     <item name="secondary_text" type="color">#727272</item>
     <item name="divider_text" type="color">#B6B6B6</item>
@@ -21,7 +22,7 @@
     <item name="grey" type="color">#555555</item>
 
     <item name="retry_grey" type="color">#757575</item>
-
+    <item name="transparent" type="color">#00000000</item>
     <!-- -->
 
 
