--- a/Android/Lead/app/src/main/res/values/dimens.xml
+++ b/Android/Lead/app/src/main/res/values/dimens.xml
@@ -23,7 +23,7 @@
     <dimen name="text_secondary">14sp</dimen>
     <dimen name="text_caption">12sp</dimen>
     <dimen name="text_caption_height">48dp</dimen>
-    <dimen name="text_card_view_title">20sp</dimen>
+    <dimen name="text_card_view_title">16sp</dimen>
     <dimen name="text_card_view_big_title">24sp</dimen>
 
 
@@ -68,10 +68,10 @@
     <!-- Drawer layout-->
     <dimen name="drawer_item_margin_left">16dp</dimen>
     <dimen name="drawer_item_margin_right">16dp</dimen>
-    <dimen name="drawer_item_margin_top">8dp</dimen>
+    <dimen name="drawer_item_margin_top">16dp</dimen>
     <dimen name="drawer_item_margin_bottom">8dp</dimen>
 
-    <dimen name="drawer_user_image_width">70dp</dimen>
-    <dimen name="drawer_user_image_height">70dp</dimen>
-    <dimen name="drawer_user_image_margin_top">38dp</dimen>
+    <dimen name="drawer_user_image_width">72dp</dimen>
+    <dimen name="drawer_user_image_height">72dp</dimen>
+    <!-- <dimen name="drawer_user_image_margin_top">16dp</dimen>-->
 </resources>
