--- a/Android/Lead/app/src/main/res/layout/activity_login.xml
+++ b/Android/Lead/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.orbital.lead.controller.LoginActivity">
+    tools:context="com.orbital.lead.controller.Activity.LoginActivity">
 
     <FrameLayout android:id="@+id/login_activity_container" android:layout_width="match_parent"
         android:layout_height="match_parent" />
