--- a/Android/Lead/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/Lead/app/src/main/res/layout/fragment_detail.xml
@@ -10,7 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical" >
+
+        <include layout="@layout/blank_view_header" />
 
         <TextView android:layout_width="match_parent" android:layout_height="match_parent"
             android:text="@string/test_string" />
