--- a/Android/Lead/app/src/main/res/layout/fragment_login.xml
+++ b/Android/Lead/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.orbital.lead.controller.FragmentLogin"
+    tools:context="com.orbital.lead.controller.Fragment.FragmentLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -69,9 +69,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"/>
 
-
-
     </RelativeLayout>
+
 
 
 
