--- a/Android/Lead/app/src/main/res/values/styles.xml
+++ b/Android/Lead/app/src/main/res/values/styles.xml
@@ -94,9 +94,34 @@
         <item name="android:paddingBottom">0dp</item>
     </style>
 
+    <style name="CardViewContentStyle">
+        <item name="android:layout_marginTop">24dp</item>
+        <!--
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        -->
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingBottom">16dp</item>
+    </style>
+
+    <style name="CardViewTitleStyle">
+        <item name="android:textSize">@dimen/text_card_view_title</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/primary_dark</item>
+    </style>
+
+    <style name="CardViewSubTitleStyle">
+        <item name="android:textSize">@dimen/text_secondary</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/secondary_text</item>
+    </style>
+
     <style name="DrawerHeaderStyle">
         <item name="android:layout_marginLeft">@dimen/drawer_item_margin_left</item>
         <item name="android:layout_marginRight">@dimen/drawer_item_margin_right</item>
+        <item name="android:layout_marginTop">@dimen/drawer_item_margin_top</item>
         <item name="android:layout_marginBottom">@dimen/drawer_item_margin_bottom</item>
     </style>
 
@@ -109,7 +134,51 @@
     <style name="DrawerHeaderUserImageStyle">
         <item name="android:width">@dimen/drawer_user_image_width</item>
         <item name="android:height">@dimen/drawer_user_image_height</item>
-        <item name="android:layout_marginTop">@dimen/drawer_user_image_margin_top</item>
     </style>
+
+    <style name="DrawerHeaderUserNameStyle">
+        <item name="android:layout_marginTop">@dimen/drawer_item_margin_top</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_secondary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DrawerHeaderUserEmailStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_secondary</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="RecyclerViewJournalListStyle">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <!--
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        -->
+    </style>
+
+    <style name="SpecificJournalPage_Date_Day_Digit_Style">
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="SpecificJournalPage_Date_Day_Name_Style">
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textSize">@dimen/text_caption</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+
+    <style name="SpecificJournalPage_Date_Month_Year_Style">
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textSize">@dimen/text_caption</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
 
 </resources>
